--- a/conf/supervisor.home-temp-restapi.production.conf
+++ b/conf/supervisor.home-temp-restapi.production.conf
@@ -4,6 +4,7 @@ command=/home/pi/.virtualenvs/home-temp-restapi/bin/gunicorn home_temp_restapi.w
 
 autostart=true
 autorestart=true
+user=pi
 
 stdout_logfile=/var/log/supervisor/home-temp-restapi.out.log
 stderr_logfile=/var/log/supervisor/home-temp-restapi.err.log
