Mqtt changed to work directly with supervisor.

--- a/conf/supervisor.mqtt-worker.production.conf
+++ b/conf/supervisor.mqtt-worker.production.conf
@@ -1,6 +1,6 @@
 [program:mqtt-worker]
 directory=/home/pi/home-temp-restapi/source/
-command=/home/pi/.virtualenvs/home-temp-restapi/bin/celery celery -A home-temp-restapi worker --loglevel=info
+command=/home/pi/.virtualenvs/home-temp-restapi/bin/python /home/pi/home-temp-mqtt-worker/source/manage.py startmqttlistener
 
 autostart=true
 autorestart=true
