--- a/conf/nginx.home-temp-restapi.production.conf
+++ b/conf/nginx.home-temp-restapi.production.conf
@@ -5,11 +5,38 @@ server {
     location = /favicon.ico { access_log off; log_not_found off; }
 
     location /static/ {
-            root /home/pi/home-temp-restapi/source/home-temp-restapi;
+        root /home/pi/home-temp-restapi/source/home-temp-restapi;
     }
 
     location / {
-            include proxy_params;
-            proxy_pass http://unix:/home/pi/home-temp-restapi/source/home-temp-restapi/home-temp-restapi.sock;
+        include proxy_params;
+        proxy_pass http://unix:/home/pi/home-temp-restapi/source/home-temp-restapi/home-temp-restapi.sock;
+        if ($request_method = 'OPTIONS') {
+            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+            #
+            # Custom headers and headers various browsers *should* be OK with but aren't
+            #
+            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
+            #
+            # Tell client that this pre-flight info is valid for 20 days
+            #
+            add_header 'Access-Control-Max-Age' 1728000;
+            add_header 'Content-Type' 'text/plain; charset=utf-8';
+            add_header 'Content-Length' 0;
+            return 204;
+         }
+         if ($request_method = 'POST') {
+            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
+            add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range';
+         }
+         if ($request_method = 'GET') {
+            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
+            add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range';
+         }
     }
 }
