--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,8 @@ cffi==1.11.5
 cryptography==2.3
 decorator==4.3.0
 Django==2.0.7
+django-cors-headers==2.4.0
+django-debug-toolbar==1.9.1
 django-extensions==2.1.0
 extensions==0.4
 Fabric3==1.14.post1
@@ -32,6 +34,7 @@ PyNaCl==1.2.1
 pytz==2018.5
 simplegeneric==0.8.1
 six==1.11.0
+sqlparse==0.2.4
 traitlets==4.3.2
 vine==1.1.4
 wcwidth==0.1.7
