--- a/requirements.txt
+++ b/requirements.txt
@@ -4,37 +4,52 @@ backcall==0.1.0
 bcrypt==3.1.4
 billiard==3.5.0.4
 cffi==1.11.5
-cryptography==2.3
+cryptography==2.1.4
 decorator==4.3.0
 Django==2.0.7
 django-cors-headers==2.4.0
 django-debug-toolbar==1.9.1
 django-extensions==2.1.0
+enum34==1.1.6
 extensions==0.4
+Fabric==1.14.0
 Fabric3==1.14.post1
 gunicorn==19.9.0
-idna==2.7
+idna==2.6
 invoke==1.1.0
+ipaddress==1.0.17
 ipython==6.4.0
 ipython-genutils==0.2.0
 jedi==0.12.1
+jeepney==0.3.1
+keyring==10.6.0
+keyrings.alt==3.0
 kombu==4.2.1
+numpy==1.15.1
 paho-mqtt==1.3.1
-paramiko==2.4.1
+paramiko==2.0.0
 parso==0.3.1
+pbr==4.2.0
 pexpect==4.6.0
 pickleshare==0.7.4
 prompt-toolkit==1.0.15
 psycopg2==2.7.5
 ptyprocess==0.6.0
-pyasn1==0.4.4
+pyasn1==0.4.2
 pycparser==2.18
 Pygments==2.2.0
 PyNaCl==1.2.1
 pytz==2018.5
+pyxdg==0.25
+scipy==1.1.0
+SecretStorage==2.3.1
 simplegeneric==0.8.1
 six==1.11.0
 sqlparse==0.2.4
+stevedore==1.29.0
 traitlets==4.3.2
 vine==1.1.4
+virtualenv==16.0.0
+virtualenv-clone==0.3.0
+virtualenvwrapper==4.8.2
 wcwidth==0.1.7
